frontend: configure compose task